--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "passport": "~0.1.16",
     "mongoose": "~3.5.7",
     "underscore": "~1.4.4",
-    "async": "~0.2.6"
+    "async": "~0.2.6",
+    "passport-local": "~0.1.6",
+    "passport-local-mongoose": "~0.2.1",
+    "connect-flash": "~0.1.0"
   }
 }
